se agrego problema 3

--- a/Problema2.html
+++ b/Problema2.html
@@ -36,21 +36,14 @@
         if (cantidadTotal <= 10){
             var cantidadTotalSticker = document.querySelector('#textStickers')
             cantidadTotalSticker.innerHTML = 'Llevas ' + cantidadTotal + ' stickers'
-            console.log = cantidadTotal
+            console.log (cantidadTotal)
         }
         else {
             var cantidadTotalSticker = document.querySelector('#textStickers')
             cantidadTotalSticker.innerHTML = 'Llevas demasiados stickers'
-            console.log = cantidadTotal
+            console.log (cantidadTotal)
         }
     ">Verificar</button>
 
-    <script>
-        var numb1 = document.querySelector('#input1').value
-        var numb2 = document.querySelector('#input2').value
-        var numb3 = document.querySelector('#input3').value
-        
-        var cantidadTotal = numb1 * numb2 * numb3
-    </script>
 </body>
 </html>
